add window close test page

--- a/test/www/index.html
+++ b/test/www/index.html
@@ -9,6 +9,7 @@
 <body>
     <nav>
         <ul>
+            <li><a href="/leave.html">Window Test</a></li>
             <li><a href="/upload.html">File upload</a></li>
         </ul>
     </nav>
